# Chromaspace

./: README.md  pyproject.toml
.github/: copilot-instructions.md
config/: CHROMASPACE_CONFIG.json  CHROMASPACE_CONFIG.json.bak
config/CHROMASPACE.d/: Chromaspace_SECONDARY.json  _COLOUR_SYSTEM_POINTER.json
config/CHROMASPACE_SPEC/: COLOUR_SYSTEM_CONFIG_1x45x4x4_OKLCH.json  COLOUR_SYSTEM_CONFIG_2x18x5x5.json  COLOUR_SYSTEM_CONFIG_2x20x5x5.json  COLOUR_SYSTEM_CONFIG_2x21x4x5.json  COLOUR_SYSTEM_CONFIG_2x30x4x4_OKLCH.json  COLOUR_SYSTEM_CONFIG_3x18x4x4.json  COLOUR_SYSTEM_CONFIG_3x20x4x4.json  COLOUR_SYSTEM_CONFIG_3x24x4x4.json
dict/: xkcd_colors.json
docs/: CHANGELOG.md  README.md  ROADMAP.md  generation_pipeline.md  hue_model.md  naming_schema.md  overview.md  tone_grid.md  tone_model.md  wheel_modes.md
examples/: TESTS_CONFIG.py  exemplar.py  test_paths.json
scripts/: filter_colours.py  generate_json.py  inspect_colour.py  make_xkcd.py  preview_colours.py  render_hue_squares.py  render_tone_grid.py  render_wheels.py
src/Chromaspace/: __init__.py  cli_utils.py  colour_engine.py  config.py  export.py  generator.py  hsv.py  html.py  hue.py  main.py  tone.py  visualization.py  xkcd.py
src/Chromaspace/colour_spaces/: __init__.py  hsv.py  lab.py  oklch.py
src/Chromaspace/core/: __init__.py  math_utils.py
tests/: conftest.py  test_colour_space_registry.py  test_config_resolution.py  test_core_math.py  test_generator.py  test_geometry.py  test_hsv.py  test_hue.py  test_interfaces.py  test_registry.py  test_tone.py  test_xkcd.py
(+12 files in other folders)
